components/go-analysis/fixtures/bad/analyzer/go.mod
module example.com/standards/bad/analyzer

go 1.23
